cmake_minimum_required(VERSION 3.1 FATAL_ERROR)

project(euler LANGUAGES C)

find_package(OpenMP)
find_library(MATH_LIBRARY m)

add_subdirectory(001-050)
add_executable(problem-051 problem-051.c)
add_executable(problem-052 problem-052.c)
add_executable(problem-053 problem-053.c)
add_executable(problem-054 problem-054.c)
add_executable(problem-055 problem-055.c)
add_executable(problem-056 problem-056.c)
add_executable(problem-057 problem-057.c)
add_executable(problem-058 problem-058.c)
add_executable(problem-059 problem-059.c)
add_executable(problem-060 problem-060.c)
add_executable(problem-061 problem-061.c)
add_executable(problem-062 problem-062.c)
add_executable(problem-063 problem-063.c)
add_executable(problem-065 problem-065.c)
add_executable(problem-067 problem-067.c)
if(MATH_LIBRARY)
  add_executable(problem-069 problem-069.c)
  target_link_libraries(problem-069 ${MATH_LIBRARY})
endif()
