add_executable(problem-051 problem-051.c)
add_executable(problem-052 problem-052.c)
add_executable(problem-053 problem-053.c)
add_executable(problem-054 problem-054.c)
add_executable(problem-055 problem-055.c)
add_executable(problem-056 problem-056.c)
add_executable(problem-057 problem-057.c)
add_executable(problem-058 problem-058.c)
add_executable(problem-059 problem-059.c)
add_executable(problem-060 problem-060.c)
add_executable(problem-061 problem-061.c)
add_executable(problem-062 problem-062.c)
add_executable(problem-063 problem-063.c)
add_executable(problem-065 problem-065.c)
add_executable(problem-067 problem-067.c)
if(MATH_LIBRARY)
  add_executable(problem-069 problem-069.c)
  target_link_libraries(problem-069 ${MATH_LIBRARY})
endif()
add_executable(problem-076 problem-076.c)
add_executable(problem-078 problem-078.c)
add_executable(problem-079 problem-079.c)
add_executable(problem-081 problem-081.c)
add_executable(problem-092 problem-092.c)
add_executable(problem-097 problem-097.c)
if(MATH_LIBRARY)
add_executable(problem-099 problem-099.c)
  target_link_libraries(problem-099 ${MATH_LIBRARY})
endif()